# UMinho-LEI-Archives

./: .gitignore  LICENSE  README.md
Ano_1/Semestre_1/LI1/: README.md
Ano_3/Semestre_2/CG/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
Ano_3/Semestre_2/CG/demo_sistema_solar/: cometa.patch  run_demo.sh  sistemasolar.xml
Ano_3/Semestre_2/CG/include/engine/: Camera.h  FreeCamera.h  Group.h  Model.h  OrbitalCamera.h  Point.h  TexCoord.h  Transform.h
Ano_3/Semestre_2/CG/include/generator/: generatorUtils.h
Ano_3/Semestre_2/CG/include/generator/figures/: box.h  cometa.h  cone.h  figure.h  patch.h  plane.h  sphere.h  torus.h
Ano_3/Semestre_2/CG/src/engine/: Camara.cpp  FreeCamera.cpp  Group.cpp  Model.cpp  OrbitalCamera.cpp  Transform.cpp  engine.cpp
Ano_3/Semestre_2/CG/src/generator/: generator.cpp  generatorUtils.cpp
Ano_3/Semestre_2/CG/src/generator/figures/: box.cpp  cometa.cpp  cone.cpp  figure.cpp  patch.cpp  plane.cpp  sphere.cpp  torus.cpp
Ano_3/Semestre_2/CG/test_files/: run_test.sh
Ano_3/Semestre_2/CG/test_files/test_files_phase_4/: test_4_3.xml  test_4_4.xml  test_4_5.xml
Ano_3/Semestre_2/CG/testes_normais/: box.xml  cometa.xml  cone.xml  generate_all.sh  patch.xml  plane.xml  sphere.xml  torus.xml
Ano_3/Semestre_2/PL/: .gitignore  LICENSE  README.md  pyproject.toml
Ano_3/Semestre_2/PL/src/: ast_nodes.py  codegen.py  lexer.py  main.py  optimizer.py  parser.py  semantic.py  symbol_table.py
Ano_3/Semestre_2/PL/tests/: exemplo2_fatorial.f  exemplo3_primo.f  exemplo4_soma_lista.f  exemplo5_conversor_base.f  exemplo6_subrotinas.f  exemplo7_continuation.f  exemplo8_arrays.f  test.py
Ano_3/Semestre_2/PL/tests/expected_outputs/: exemplo1_ola.expected  exemplo1_ola.vm  exemplo2_fatorial.expected  exemplo2_fatorial.vm  exemplo3_primo.expected  exemplo3_primo.vm  exemplo4_soma_lista.expected  exemplo4_soma_lista.vm  exemplo5_conversor_base.expected  exemplo5_conversor_base.vm  exemplo6_subrotinas.expected  exemplo6_subrotinas.vm  exemplo7_continuation.expected  exemplo7_continuation.vm  exemplo8_arrays.expected  exemplo8_arrays.vm
Ano_3/Semestre_2/SSI/Projeto/: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml
Ano_3/Semestre_2/SSI/Projeto/diagrams/: connection-lifecycle.puml  offline-workflow.puml  pki-certificate-flow.puml  server-architecture.puml
Ano_3/Semestre_2/SSI/Projeto/docs_src/: conf.py  index.rst
Ano_3/Semestre_2/SSI/Projeto/docs_src/_api/: src.client.rst  src.crypto.rst  src.protocol.rst  src.rst  src.server.ca.rst  src.server.rst  src.storage.rst
Ano_3/Semestre_2/SSI/Projeto/docs_src/_static/: custom.css
Ano_3/Semestre_2/SSI/Projeto/src/: __init__.py  rich_logging.py
Ano_3/Semestre_2/SSI/Projeto/src/client/: __init__.py  app_service.py  cli.py  client.py  contact_manager.py  group_manager.py  gui_backend.py  gui_controller.py  gui_main.py  key_manager.py  main.py  session_manager.py
Ano_3/Semestre_2/SSI/Projeto/src/crypto/: __init__.py  asymmetric.py  certificates.py  kdf.py  passwords.py  primitives.py  ratchet.py  x3dh.py
Ano_3/Semestre_2/SSI/Projeto/src/protocol/: __init__.py  handshake.py  messages.py  transport.py
Ano_3/Semestre_2/SSI/Projeto/src/server/: __init__.py  connection_handler.py  main.py  runtime_dashboard.py  server.py
Ano_3/Semestre_2/SSI/Projeto/tests/: __init__.py  test_cli_group_flows.py  test_client.py  test_crypto.py  test_gui_backend.py  test_gui_controller.py  test_integration.py  test_integration_extra.py  test_protocol.py  test_protocol_pki_negative_paths.py  test_ratchet.py  test_rich_logging.py  test_server.py  test_storage.py  test_stress_fuzz.py  test_x3dh.py
(+467 files in other folders)
