[project]
name = "fortran77-compiler"
version = "0.1.0"
description = "A Fortran 77 compiler for a university project."
authors = [
    {name = "PL Group",email = "pl@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ply (>=3.11,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]
