[tool.poetry]
name = "secure-chat"
version = "0.1.0"
description = "An end-to-end encrypted chat system for a university project."
authors = ["DelgadoDevT", "PaoComPlanta", "yHugoSoares"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
cryptography = ">=42.0.0"
argon2-cffi = ">=23.1.0"
rich = ">=13.0.0"
python-dotenv = ">=1.0.0"
fastapi = ">=0.116.0"
uvicorn = ">=0.35.0"
websockets = ">=14.0.0"
pywebview = ">=5.3.2"
qtpy = "^2.4.3"
pyqt6 = "^6.11.0"
pyqt6-webengine = "^6.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = "^1.3.0"
sphinx = ">=7.4.0"
furo = "^2025.12.19"
sphinx-rtd-theme = "^3.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
